compiler/driver/tests/snapshots/diagnostics_snapshots__diag_match_non_exhaustive.snap
---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(&out)
---
error[E023]: non-exhaustive match: missing variant `B`
  --> diag_match_non_exhaustive.ny:4:19
   |
  4 |     let n = match e { E.A => 1 }
   |                   ^
   = help: add a match arm for this variant, or use `_` as a wildcard
